src/EG1.java
/* Generated By:JavaCC: Do not edit this line. EG1.java */
import java.util.ArrayList;
import java.util.Collections;
import java.io.ByteArrayInputStream;

public class EG1 implements EG1Constants {
  public static void main(String args []) throws ParseException
  {
    // String str = "1 02:00; 2014 Mar Th[1] ; 2014 Jan 25 03:00;";

   //  String str = "12:01-13:02, 14:00 , 10:00-sunset , 11:01-45:00/45 ; 12-16 closed  ; Mo, We 12:01-13:02 ; Apr-Sep Tu-Th,Fr 10:01-13:03, Dec 13:03-21:01 ; week 01-22 10:11-14:14 ; 2014 Jan 2 03:00;";
    // String str = "12:01-13:02, 14:00 , 10:00-sunset , 11:01-45:00/46 ; 12-16 closed \"ein test\" ; Mo, We 12:01-13:02 ; Apr-Sep 10:01-13:03, Dec 13:03-21:01";
    String str = "closed \u005c"ein test\u005c" ;";

    EG1 parser = new EG1(new ByteArrayInputStream(str.getBytes()));
    ArrayList<Rule> rules = parser.rules();
    for (Rule rl:rules)
        {
          System.out.println(rl.toString());
        }
  }

  static final public String comment() throws ParseException {
    trace_call("comment");
    try {
        Token r = null;
      r = jj_consume_token(ENDQUOTE);
    System.out.println(">"+r.image+"< ");
    {if (true) return r.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("comment");
    }
  }

  static final public int time() throws ParseException {
    trace_call("time");
    try {
  Token h = null;
  Token m = null;
  int result = 0;
      h = jj_consume_token(HOUR);
      if (jj_2_1(10)) {
        m = jj_consume_token(MINUTES);
    result = Integer.parseInt(m.image.substring(1));
      } else {
        ;
      }
    result = result + Integer.parseInt(h.image) * 60;
        {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("time");
    }
  }

  static final public int extendedtime() throws ParseException {
    trace_call("extendedtime");
    try {
  Token h = null;
  Token m = null;
  int result = 0;
      if (jj_2_2(10)) {
        h = jj_consume_token(EXTENDEDHOUR);
      } else if (jj_2_3(10)) {
        h = jj_consume_token(HOUR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_4(10)) {
        m = jj_consume_token(MINUTES);
      result = Integer.parseInt(m.image.substring(1));
      } else {
        ;
      }
    result = result + Integer.parseInt(h.image) * 60;
        {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("extendedtime");
    }
  }

  static final public VariableTime variabletime() throws ParseException {
    trace_call("variabletime");
    try {
        Token event = null;
        Token sign = null;
        int offset = 0;
        VariableTime vt = new VariableTime();
      if (jj_2_7(10)) {
        event = jj_consume_token(EVENTS);
          vt.event =  event.image;
          {if (true) return vt;}
      } else if (jj_2_8(10)) {
        jj_consume_token(30);
        event = jj_consume_token(EVENTS);
        if (jj_2_5(10)) {
          sign = jj_consume_token(PLUS);
        } else if (jj_2_6(10)) {
          sign = jj_consume_token(HYPHEN);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        offset = time();
        jj_consume_token(31);
          vt.event =  event.image;
          vt.offset = (sign.image.equals("-") ? -1 : 1) * offset;
        {if (true) return vt;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("variabletime");
    }
  }

  static final public int interval() throws ParseException {
    trace_call("interval");
    try {
  Token minutes = null;
  Token hours = null;
  int interval = 0;
      jj_consume_token(SLASH);
      if (jj_2_12(10)) {
        if (jj_2_9(10)) {
          minutes = jj_consume_token(HOUR);
        } else if (jj_2_10(10)) {
          minutes = jj_consume_token(EXTENDEDHOUR);
        } else if (jj_2_11(10)) {
          minutes = jj_consume_token(NUMBER);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
            interval = Integer.parseInt(minutes.image);
      } else if (jj_2_13(10)) {
        hours = jj_consume_token(HOUR);
        minutes = jj_consume_token(MINUTES);
            interval = Integer.parseInt(hours.image)*60 + Integer.parseInt(minutes.image.substring(1));
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        {if (true) return interval;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("interval");
    }
  }

  static final public TimeSpan timespan() throws ParseException {
    trace_call("timespan");
    try {
  int start = 0;
  int end = -1;
  Token startplus = null;
  Token endplus = null;
  VariableTime startVT = null;
  VariableTime endVT = null;
  TimeSpan ts =new TimeSpan();
  int inter = 0;
      if (jj_2_24(10)) {
        if (jj_2_14(10)) {
          start = time();
                ts.start = start;
        } else if (jj_2_15(10)) {
          startVT = variabletime();
                ts.startEvent = startVT;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_23(10)) {
          if (jj_2_21(10)) {
            startplus = jj_consume_token(PLUS);
          } else if (jj_2_22(10)) {
            jj_consume_token(HYPHEN);
            if (jj_2_16(10)) {
              end = extendedtime();
        ts.end = end;
            } else if (jj_2_17(10)) {
              endVT = variabletime();
        ts.endEvent = endVT;
            } else {
              jj_consume_token(-1);
              throw new ParseException();
            }
            if (jj_2_20(10)) {
              if (jj_2_18(10)) {
                endplus = jj_consume_token(PLUS);
              } else if (jj_2_19(10)) {
                inter = interval();
        ts.interval = inter;
              } else {
                jj_consume_token(-1);
                throw new ParseException();
              }
            } else {
              ;
            }
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        } else {
          ;
        }
          ts.openEnded = startplus != null || endplus != null;
      {if (true) return ts;}
      } else if (jj_2_25(10)) {
        jj_consume_token(ALWAYS);
                ts.twentyfourseven = true;
                {if (true) return ts;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("timespan");
    }
  }

  static final public ArrayList<TimeSpan> time_selector() throws ParseException {
    trace_call("time_selector");
    try {
  TimeSpan ts,ts1;
  ArrayList<TimeSpan> result = new ArrayList<TimeSpan>();
      ts = timespan();
      label_1:
      while (true) {
        if (jj_2_26(10)) {
          ;
        } else {
          break label_1;
        }
        label_2:
        while (true) {
          if (jj_2_27(10)) {
            ;
          } else {
            break label_2;
          }
          jj_consume_token(WS);
        }
        jj_consume_token(COMMA);
        label_3:
        while (true) {
          if (jj_2_28(10)) {
            ;
          } else {
            break label_3;
          }
          jj_consume_token(WS);
        }
        ts1 = timespan();
        result.add(0,ts1);
      }
    result.add(ts);
    Collections.reverse(result);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("time_selector");
    }
  }

  static final public String weekday() throws ParseException {
    trace_call("weekday");
    try {
  Token w = null;
      w = jj_consume_token(WEEKDAY);
   {if (true) return w.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("weekday");
    }
  }

  static final public WeekDayRange weekday_range() throws ParseException {
    trace_call("weekday_range");
    try {
        String startDay = null;
        String endDay = null;
        Nth nth = null;
        Nth nth1 = null;
        WeekDayRange wdr = new WeekDayRange();
      startDay = weekday();
      if (jj_2_29(10)) {
        jj_consume_token(HYPHEN);
        endDay = weekday();
    wdr.endDay = endDay;
      } else {
        ;
      }
        wdr.startDay = startDay;
        {if (true) return wdr;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("weekday_range");
    }
  }

  static final public Nth nth() throws ParseException {
    trace_call("nth");
    try {
  Nth n = new Nth();
  Token t1 = null;
  Token t2 = null;
      if (jj_2_34(10)) {
        t1 = jj_consume_token(ONE2FIVE);
      n.startNth = Integer.parseInt(t1.image);
      } else {
        ;
      }
      if (jj_2_35(10)) {
        jj_consume_token(HYPHEN);
        t2 = jj_consume_token(ONE2FIVE);
      n.endNth = Integer.parseInt(t2.image);
      } else {
        ;
      }
                {if (true) return n;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("nth");
    }
  }

  static final public ArrayList<WeekDayRange> weekday_selector() throws ParseException {
    trace_call("weekday_selector");
    try {
  WeekDayRange wdr,wdr1;
  ArrayList<WeekDayRange> result = new ArrayList<WeekDayRange>();
      wdr = weekday_range();
      label_7:
      while (true) {
        if (jj_2_36(10)) {
          ;
        } else {
          break label_7;
        }
        label_8:
        while (true) {
          if (jj_2_37(10)) {
            ;
          } else {
            break label_8;
          }
          jj_consume_token(WS);
        }
        jj_consume_token(COMMA);
        label_9:
        while (true) {
          if (jj_2_38(10)) {
            ;
          } else {
            break label_9;
          }
          jj_consume_token(WS);
        }
        wdr1 = weekday_range();
        result.add(0,wdr1);
      }
    result.add(wdr);
    Collections.reverse(result);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("weekday_selector");
    }
  }

  static final public Holiday holiday() throws ParseException {
    trace_call("holiday");
    try {
  Token h = null;
  Token n = null;
  Token m = null;
  Holiday result = new Holiday();
      h = jj_consume_token(HOLIDAYS);
      if (jj_2_43(10)) {
        if (jj_2_39(10)) {
          m = jj_consume_token(HYPHEN);
        } else if (jj_2_40(10)) {
          jj_consume_token(PLUS);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        n = jj_consume_token(NUMBER);
        if (jj_2_41(10)) {
          jj_consume_token(WS);
        } else {
          ;
        }
        jj_consume_token(34);
        if (jj_2_42(10)) {
          jj_consume_token(35);
        } else {
          ;
        }
      result.offset = Integer.parseInt(n.image);
      if (m!= null) {
                result.offset = result.offset*-1;
      }
      } else {
        ;
      }
    result.type = Holiday.Type.valueOf(h.image);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("holiday");
    }
  }

  static final public ArrayList<Holiday> holiday_sequence() throws ParseException {
    trace_call("holiday_sequence");
    try {
  Holiday h = null;
  Holiday h1 = null;
  ArrayList<Holiday> result = new ArrayList<Holiday>();
      h = holiday();
      label_10:
      while (true) {
        if (jj_2_44(10)) {
          ;
        } else {
          break label_10;
        }
        label_11:
        while (true) {
          if (jj_2_45(10)) {
            ;
          } else {
            break label_11;
          }
          jj_consume_token(WS);
        }
        jj_consume_token(COMMA);
        label_12:
        while (true) {
          if (jj_2_46(10)) {
            ;
          } else {
            break label_12;
          }
          jj_consume_token(WS);
        }
        h1 = holiday();
        result.add(0,h1);
      }
    result.add(h);
    Collections.reverse(result);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("holiday_sequence");
    }
  }

  static final public String month() throws ParseException {
    trace_call("month");
    try {
  Token m = null;
      m = jj_consume_token(MONTH);
        {if (true) return m.image;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("month");
    }
  }

  static final public MonthDayRange monthday_range() throws ParseException {
    trace_call("monthday_range");
    try {
        Token nth = null;
        Token year = null;
        Token n = null;
        String startMonth = null;
        String endMonth = null;
        MonthDayRange mdr = new MonthDayRange();
        DateWithOffset startDate = null;
        DateWithOffset endDate = null;
        Token plus = null;
      startDate = datewithoffset();
      if (jj_2_47(10)) {
        plus = jj_consume_token(PLUS);
      } else {
        ;
      }
                  mdr.startDate = startDate;
                  startDate.openEnded = plus != null;
      if (jj_2_50(10)) {
        label_13:
        while (true) {
          if (jj_2_48(10)) {
            ;
          } else {
            break label_13;
          }
          jj_consume_token(WS);
        }
        jj_consume_token(HYPHEN);
        label_14:
        while (true) {
          if (jj_2_49(10)) {
            ;
          } else {
            break label_14;
          }
          jj_consume_token(WS);
        }
        endDate = datewithoffset();
                  mdr.endDate = endDate;
      } else {
        ;
      }
        {if (true) return mdr;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("monthday_range");
    }
  }

  static final public int daynum() throws ParseException {
    trace_call("daynum");
    try {
        Token n = null;
      if (jj_2_51(10)) {
        n = jj_consume_token(HOUR);
      } else if (jj_2_52(10)) {
        n = jj_consume_token(DAYNUM);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        {if (true) return Integer.parseInt(n.image);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("daynum");
    }
  }

  static final public DateWithOffset datewithoffset() throws ParseException {
    trace_call("datewithoffset");
    try {
  DateWithOffset dwo = new DateWithOffset();
  Token y = null;
  Token m = null;
  Token d = null;
  Token h = null;
  Token n = null;
  Token v = null;
  Token minus = null;
  Token num = null;
  Token wd = null;
      if (jj_2_54(10)) {
        y = jj_consume_token(YEAR);
        label_15:
        while (true) {
          jj_consume_token(WS);
          if (jj_2_53(10)) {
            ;
          } else {
            break label_15;
          }
        }
                dwo.year = Integer.parseInt(y.image);
      } else {
        ;
      }
      if (jj_2_68(10)) {
        m = jj_consume_token(MONTH);
                      dwo.month = m.image;
      } else if (jj_2_69(10)) {
        if (jj_2_59(10)) {
          if (jj_2_56(10)) {
            m = jj_consume_token(MONTH);
            label_16:
            while (true) {
              jj_consume_token(WS);
              if (jj_2_55(10)) {
                ;
              } else {
                break label_16;
              }
            }
                                        dwo.month = m.image;
          } else {
            ;
          }
          dwo.day = daynum();
        } else if (jj_2_60(10)) {
          m = jj_consume_token(MONTH);
          label_17:
          while (true) {
            jj_consume_token(WS);
            if (jj_2_57(10)) {
              ;
            } else {
              break label_17;
            }
          }
          d = jj_consume_token(WEEKDAY);
          jj_consume_token(32);
          if (jj_2_58(10)) {
            h = jj_consume_token(HYPHEN);
          } else {
            ;
          }
          n = jj_consume_token(ONE2FIVE);
          jj_consume_token(33);
             dwo.month = m.image;
             dwo.weekDay = d.image;
             dwo.nth = Integer.parseInt(n.image);
             if (h!=null)
             {
                       dwo.nth = dwo.nth * -1;
             }
        } else if (jj_2_61(10)) {
          v = jj_consume_token(VARDATE);
                 dwo.varDate = v.image;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        if (jj_2_64(10)) {
          if (jj_2_62(10)) {
            minus = jj_consume_token(HYPHEN);
          } else if (jj_2_63(10)) {
            jj_consume_token(PLUS);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          wd = jj_consume_token(WEEKDAY);
             dwo.weekDayOffsetPositive = minus == null;
             dwo.weekDayOffset = wd.image;
        } else {
          ;
        }
        if (jj_2_67(10)) {
          if (jj_2_65(10)) {
            minus = jj_consume_token(HYPHEN);
          } else if (jj_2_66(10)) {
            jj_consume_token(PLUS);
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          num = jj_consume_token(NUMBER);
              dwo.dayOffset = Integer.parseInt(num.image) * (minus != null ? -1 : 1);
        } else {
          ;
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    {if (true) return dwo;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("datewithoffset");
    }
  }

  static final public ArrayList<MonthDayRange> monthday_selector() throws ParseException {
    trace_call("monthday_selector");
    try {
  MonthDayRange mdr,mdr1;
  ArrayList<MonthDayRange> result = new ArrayList<MonthDayRange>();
      mdr = monthday_range();
      label_18:
      while (true) {
        if (jj_2_70(10)) {
          ;
        } else {
          break label_18;
        }
        label_19:
        while (true) {
          if (jj_2_71(10)) {
            ;
          } else {
            break label_19;
          }
          jj_consume_token(WS);
        }
        jj_consume_token(COMMA);
        label_20:
        while (true) {
          if (jj_2_72(10)) {
            ;
          } else {
            break label_20;
          }
          jj_consume_token(WS);
        }
        mdr1 = monthday_range();
        result.add(0,mdr1);
      }
    result.add(mdr);
    Collections.reverse(result);
    {if (true) return result;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("monthday_selector");
    }
  }

  static final public int weeknum() throws ParseException {
    trace_call("weeknum");
    try {
        Token n = null;
      if (jj_2_73(10)) {
        n = jj_consume_token(HOUR);
      } else if (jj_2_74(10)) {
        n = jj_consume_token(EXTENDEDHOUR);
      } else if (jj_2_75(10)) {
        n = jj_consume_token(WEEKNUM);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        {if (true) return Integer.parseInt(n.image);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("weeknum");
    }
  }
